# automeme

./: .dockerignore  Cargo.toml  Dockerfile  README.md  run.sh
automeme-cli/: Cargo.toml
automeme-cli/src/: main.rs
automeme-core/: Cargo.toml
automeme-core/benches/: benchmarks.rs
automeme-core/src/: lib.rs
automeme-web/: Cargo.toml
automeme-web/src/: main.rs
benches/: benchmarks.rs
src/: lib.rs  main.rs
templates/: 1984.json  afraid-to-ask.json  agnes-wink.json  all-the-things.json  always-has-been.json  ambulance.json  amongus-meeting.json  angry-fan.json  back-up.json  bane-vs-pink.json  bbq-dog.json  big-bullet.json  biggus.json  bike-sabotage.json  bill-gates-ping-pong.json  blink.json  bliss.json  bugs-no.json  bugs-shoot.json  buzz-everywhere.json  cash-money.json  cat-wtf.json  change-team.json  club-penguin-banned.json  community-chaos.json  confused-grandma.json  coraline-dad.json  couch-explain.json  daisy-ridley-pointing.json  disappear.json  disaster-girl.json  disgusted-girl.json  django-fancy.json  domino-effect.json  dragon-heads.json  eggman-button.json  epic-handshake.json  example.json  exit-drift.json  fight-dab.json  (+61 more)
templates/example/: template.json
