[package]
name = "automeme"
version = "0.1.0"
authors = ["wasabipesto <automeme@wasabipesto.com>"]
description = "a meme generator stapled to a web server"
repository = "https://github.com/wasabipesto/automeme"
license-file = "LICENSE"
edition = "2021"

[dependencies]
rocket = "=0.5.0-rc.3"
image = "0.24.7"
