[package]
name = "automeme"
version = "0.1.0"
authors = ["wasabipesto <automeme@wasabipesto.com>"]
description = "a meme generator stapled to a web server"
repository = "https://github.com/wasabipesto/automeme"
license-file = "LICENSE"
edition = "2021"

[dependencies]
actix-web = "4.4"
fontdue = "0.7.3"
glob = "0.3"
image = "0.24"
maud = { version = "0.25", features = ["actix-web"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false