[workspace]
resolver = "2"
members = [
    "automeme-core",
    "automeme-web",
    "automeme-cli",
]

[workspace.package]
version = "0.1.0"
authors = ["wasabipesto <automeme@wasabipesto.com>"]
description = "a reasonably-fast, reasonably-simple meme generation tool"
keywords = ["meme"]
repository = "https://github.com/wasabipesto/automeme"
homepage = "https://meme.limo"
license-file = "LICENSE"
edition = "2021"