[package]
name = "automeme-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
automeme-core = { path = "../automeme-core" }
arboard = "3.2"
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
