[package]
name = "automeme-core"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
fontdue = "0.7.3"
glob = "0.3"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"]}

[[bench]]
name = "benchmarks"
harness = false